@@ -1,9 +1,9 @@
 === MyKnowledgeBase ===
 Contributors: Guido07111975
-Version: 6.8
+Version: 6.9
 Requires PHP: 5.6
 Requires at least: 5.2
-Tested up to: 5.5
+Tested up to: 5.6
 License: GNU General Public License v3 or later
 License URI: https://www.gnu.org/licenses/gpl-3.0.html
 Tags: one-column, two-columns, right-sidebar, full-width-template, custom-background, custom-header, custom-menu, featured-images, footer-widgets, post-formats, sticky-post, blog, editor-style, microformats, translation-ready
@@ -87,7 +87,7 @@ This theme is translation-ready and supports language packs from wordpress.org
 Without the WordPress codex and help from the WordPress community I was not able to develop my theme, so: thank you!
 
 = Support =
-If you have a question or problem using this WordPress theme, please visit the relevant theme page at WordPress.org and open a ticket in support forum.
+If you have a question or problem while using this theme, please visit the relevant theme page at WordPress.org and open a ticket in support forum.
 
 
 == Changelog ==
